[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Audio/FXs/select.wav" type="AudioStream" id=2]

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="SelectAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[node name="MenuButtons" type="VBoxContainer" parent="."]
margin_left = -40.0
margin_top = -48.0
margin_right = 42.0
margin_bottom = 44.0

[node name="NewGameButton" type="Button" parent="MenuButtons"]
margin_right = 82.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../QuitButton")
focus_neighbour_bottom = NodePath("../ContinueButton")
text = "New Game"

[node name="ContinueButton" type="Button" parent="MenuButtons"]
margin_top = 24.0
margin_right = 82.0
margin_bottom = 44.0
focus_neighbour_top = NodePath("../NewGameButton")
focus_neighbour_bottom = NodePath("../SettingsButton")
text = "Continue"

[node name="SettingsButton" type="Button" parent="MenuButtons"]
margin_top = 48.0
margin_right = 82.0
margin_bottom = 68.0
focus_neighbour_top = NodePath("../ContinueButton")
focus_neighbour_bottom = NodePath("../QuitButton")
text = "Settings"

[node name="QuitButton" type="Button" parent="MenuButtons"]
margin_top = 72.0
margin_right = 82.0
margin_bottom = 92.0
focus_neighbour_top = NodePath("../SettingsButton")
focus_neighbour_bottom = NodePath("../NewGameButton")
text = "Quit"

[node name="SettingsButtons" type="MenuButton" parent="."]
show_behind_parent = true
margin_right = 12.0
margin_bottom = 20.0

[node name="VolumeButton" type="Button" parent="SettingsButtons"]
margin_left = -40.0
margin_top = -48.0
margin_right = 42.0
margin_bottom = -28.0
focus_neighbour_top = NodePath("../BackButton")
focus_neighbour_bottom = NodePath("../KeybindsButton")
text = "Volume"

[node name="KeybindsButton" type="Button" parent="SettingsButtons"]
margin_left = -40.0
margin_top = -24.0
margin_right = 42.0
margin_bottom = -4.0
focus_neighbour_top = NodePath("../VolumeButton")
focus_neighbour_bottom = NodePath("../DisplayButton")
text = "Keybinds"

[node name="DisplayButton" type="Button" parent="SettingsButtons"]
margin_left = -40.0
margin_right = 42.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../KeybindsButton")
focus_neighbour_bottom = NodePath("../DataButton")
text = "Display"

[node name="DataButton" type="Button" parent="SettingsButtons"]
margin_left = -40.0
margin_top = 24.0
margin_right = 42.0
margin_bottom = 44.0
focus_neighbour_top = NodePath("../DisplayButton")
focus_neighbour_bottom = NodePath("../BackButton")
text = "Data"

[node name="BackButton" type="Button" parent="SettingsButtons"]
margin_left = -40.0
margin_top = 48.0
margin_right = 42.0
margin_bottom = 68.0
focus_neighbour_top = NodePath("../DataButton")
focus_neighbour_bottom = NodePath("../VolumeButton")
text = "Back"

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[connection signal="pressed" from="MenuButtons/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="MenuButtons/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="MenuButtons/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="MenuButtons/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="SettingsButtons/VolumeButton" to="." method="_on_VolumeButton_pressed"]
[connection signal="pressed" from="SettingsButtons/KeybindsButton" to="." method="_on_KeybindsButton_pressed"]
[connection signal="pressed" from="SettingsButtons/DisplayButton" to="." method="_on_DisplayButton_pressed"]
[connection signal="pressed" from="SettingsButtons/DataButton" to="." method="_on_DataButton_pressed"]
[connection signal="pressed" from="SettingsButtons/BackButton" to="." method="_on_BackButton_pressed"]
